# balkon-borg

./: .gitignore  CLAUDE.md  Makefile  README.md  setup_audio.sh
cad/: Makefile  README.md  balkon_borg.py  freecad-views.py  preview.py  render-views.py
docs/: build-notes.md  cost-estimate.md  design-review.md  enclosure-sintering.md  ideas.md  light-scenarios.md  network.md  power-distribution.md  use-cases.md  (+1 more)
src/pi/: Makefile  README.md  implementation-plan.md  provision.py  pyproject.toml  setup.md
src/pi/arbiter/: adsb.go  adsb_test.go  audio.go  config.go  config_test.go  contract.go  contract_test.go  geo.go  go.mod  go.sum  health.go  health_test.go  inputs.go  inputs_test.go  main.go  modes_test.go  probes.go  rings_test.go  status.go  status_test.go  tuner.go  tuner_test.go  wled.go
src/pi/borgd/: adsb.go  audio.go  config.go  config_test.go  contract.go  contract_test.go  geo.go  go.mod  health.go  health_test.go  inputs_test.go  ism.go  ism_test.go  main.go  mixer.go  mixer_test.go  modes.go  probes.go  rings.go  rings_test.go  sentry.go  sentry_test.go  storm.go  storm_test.go  wled.go
src/pi/config/: borg-arbiter.service  borg-ports.conf  borg-rtlsdr-blacklist.conf  borg-sdr.rules  borgd.service  mosquitto-acl  mosquitto.conf  srv-borg-media.mount  timesyncd.conf
src/pi/quadlets/: README.md  mosquitto.container  readsb.container
src/pi/tasks/: README.md  m0-provisioning.md  m1-broker-arbiter.md  m1-broker-borgd.md  m2-audio.md  m3-buffers.md  m4a-birdnet.md  m4b-sdr.md  m4c-vision.md  m4d-media-http.md
src/pi/tests/: test_provision.py
(+148 files in other folders)
