[project]
name = "borg-provision"
version = "0.1.0"
description = "borg-pi5 provisioning tool (the Pi daemon itself is Go, see borgd/)"
requires-python = ">=3.12"

# Deliberately empty: provision.py is standard library only, so it runs on a bare
# control machine with no install step. That matters on the day the SD card died.
dependencies = []

[project.optional-dependencies]
dev = ["mypy", "pytest"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
